  broken.
- Fixed issue #10626: ezcConsoleStatusbar does not trigger warning on invalid
  status.
- Implemented issue #8461: Argument help text. A completely new argument
  handling was invented.
- Implemented issue #9216: ezcConsoleInput::getOptionValues I want long names.
  ezcConsoleInput->getOptionsValues() can now be configured to index the
  returning array with option long names.


1.2 - Monday 18 December 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #9493: Convert < and > in exception messages to ' and ' for
  Cache, ConsoleTools, ImageAnalysis, ImageConversion, PersistentObject,
  PersistentObjectDatabaseSchemaTiein.


1.2beta2 - Monday 20 November 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #8466: Properties are not documented in ezcConsoleTable,
  ezcConsoleStatusbar, etc.
- Fixed issue #9241: Progressbar does not work correctly on Mac OS X.


1.2beta1 - Tuesday 24 October 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added the 'target' property to the ezcConsoleOutputFormat struct. This
  allows you to print to a different output target (e.g. stderr).


1.1.3 - Monday 09 October 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #9046: An argument should not be treated as an invalid option
  value for an option that doesn't take any value.
- Fixed bug #9052: An exception was thrown because of an invalid property in
  ezcConsoleOption.


1.1.2 - Monday 28 August 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8738: Unexpected behaviour with options->colPadding.
- Fixed bug #8478: ezcConsoleOutput format (foreground) color 'black' not
  available. (The fore-/background colors black and gray are now the same and
  available for fore- and background).
- PHP 5.2 compatibility.


1.1.1 - Monday 07 August 2006